--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -15,5 +15,5 @@ jobs:
     - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
       with:
         bundle: palette.flatpak
-        manifest-path: io.github.ronniedroid.concessio
+        manifest-path: io.github.ronniedroid.concessio.yml
         cache-key: flatpak-builder-${{ github.sha }}
